Fixed images view, try to draw all invisible pixel white

--- a/src/main/webapp/resources/private/images.css
+++ b/src/main/webapp/resources/private/images.css
@@ -8,3 +8,10 @@ and open the template in the editor.
     Author     : Ville
 */
 
+.main {
+  -webkit-column-count: 3; /* Chrome, Safari, Opera */
+  -moz-column-count: 3; /* Firefox */
+  column-count: 3;
+  height: 90%;
+  position: absolute;
+}
